# gmobile

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  gmobile.doap  meson.build  meson_options.txt
data/: gmobile.gresources.xml  meson.build
data/devices/display-panels/: fairphone,fp4.json  fairphone,fp5.json  nothing,spacewar.json  oneplus,enchilada.json  oneplus,fajita.json  purism,librem5.json  xiaomi,beryllium.json  xiaomi,dandelion.json
debian/: changelog  control  libgmobile-doc.install  libgmobile-doc.links  rules
doc/: build-howto.md  gmobile.toml.in  libgmobile.toml.in  meson.build
examples/: gm-display-panel-preview.c  gm-display-panel-run-phosh.c  gm-timeout.c  meson.build
src/: gm-cutout.c  gm-cutout.h  gm-device-info.c  gm-device-info.h  gm-device-tree.c  gm-device-tree.h  gm-devicetree.c  gm-devicetree.h  gm-display-panel.c  gm-display-panel.h  gm-error.c  gm-error.h  gm-main.c  gm-main.h  gm-rect.c  gm-rect.h  gm-svg-path.c  gm-svg-path.h  gm-timeout.c  gm-timeout.h  gm-util.c  gm-util.h  gmobile.h  meson.build
tests/: meson.build  test-cutout.c  test-device-tree.c  test-devicetree.c  test-display-panel.c  test-svg-path.c  test-timeout.c  test-utils.c
