if get_option('examples')

test_timeout = executable(
  'gm-timeout',
  ['gm-timeout.c'],
  dependencies: [gmobile_dep],
  install: true
)

test_display_panel_preview = executable(
  'gm-display-panel-preview',
  ['gm-display-panel-preview.c'],
  dependencies: [gmobile_dep],
  install: true
)

endif
